--- a/plus/barcode.html
+++ b/plus/barcode.html
@@ -11,11 +11,21 @@
 		<script>
 			// 加载 plus
 			document.addEventListener("plusready", onPlusReady, false);
-			var scan;
+			var 
+				scan,
+				isScanBatch;
 			// 启动扫码
 			function onPlusReady() {
+				// 初始化扫码功能
 				scan = new plus.barcode.Barcode('bcid');
 				scan.onmarked = onmarked;
+				// 初始化页面
+				isScanBatch = plus.storage.getItem("isScanBatch");
+				if (isScanBatch == "true") {
+					document.getElementById("forBatchSubmit").style.display = "block";
+				} else {
+					document.getElementById("forBatchSubmit").style.display = "none";
+				}
 			}
 			// 关闭扫码
 			function cancelScan() {
@@ -23,18 +33,25 @@
 				scan.close(); // 关闭
 			}
 			// 扫码成功返回
+			var batchList = [];
 			function onmarked(type, result, file) {
-				var isScanBatch = plus.storage.getItem("isScanBatch");
 				if (isScanBatch == "true") {
 					scan.cancel();
-					plus.storage.setItem("scanCodeResult", result);
-					alert("扫码成功！");
-					scan.start();
+					batchList.push(result);
+					plus.nativeUI.alert("扫码成功！", function(){
+						scan.start();
+					}, "信息框", "确定");
 				} else {
 					plus.storage.setItem("scanCodeResult", result);
 					cancelScan();
-					location.assign("coderesult.html");
+    				clicked("coderesult.html");
 				}
+			}
+			// 批量确定
+			function batchSubmit() {
+				batchList = JSON.stringify(batchList);
+    			plus.storage.setItem("batchList", batchList);
+    			clicked("coderesult.html");
 			}
 			// 打开闪光灯
 			function setFlash() {
@@ -43,7 +60,7 @@
 			// 返回前一页
 			function goback() {
 				cancelScan();
-				history.go(-1);
+				plus.webview.currentWebview().close("slide-out-left", null);
 			}
 			// 从相册中选择二维码图片 
 			function scanPicture() {
@@ -70,9 +87,12 @@
 				<div class="txt">载入中...</div>
 			</div>
 		</div>
-		<div class="footer barcode-footer" onclick="scanPicture()">
-			<div>
+		<div class="footer barcode-footer">
+			<div onclick="scanPicture()">
 				从相册选取
+			</div>
+			<div id="forBatchSubmit" onclick="batchSubmit()">
+				批量确定
 			</div>
 		</div>
 	</body>
