--- a/signin.html
+++ b/signin.html
@@ -5,26 +5,71 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+		<meta name="misapplication-tap-highlight" content="no"/>
+		<meta name="HandheldFriendly" content="true"/>
+		<meta name="MobileOptimized" content="320"/>
 		<title>登陆</title>
 		<link rel="stylesheet" href="css/common.css" />
 		<script type="text/javascript">
+			// 禁止选择
+			document.oncontextmenu = function() {
+				return false;
+			};
 			// 检测是否存在用户登录缓存
 			if (localStorage.getItem("user")) {
 				location.assign("plus/index.html");
 			}
-			
+			var ws=null,domready=false;
 			// plusready 比 domcontentready 晚
-			document.addEventListener('plusready', function() {
+			function plusReady() {
+			if (ws||!window.plus||!domready) {
+				return;
+			}
 				plus.navigator.setStatusBarBackground('#444');
-			});
+			};
+			if(window.plus){
+				plusReady();
+			}else{
+				document.addEventListener('plusready', plusReady, false);
+			}
+			// 监听DOMContentLoaded事件
+			document.addEventListener('DOMContentLoaded', function(){
+				domready=true;
+				plusReady();
+			}, false);
 			
 			// 登录事件
 			function signin() {
 				var 
-					userName = document.getElementById("username").value,
-					userpw = document.getElementById("userpw").value;
-				localStorage.setItem("user", userName);
-				location.assign("plus/index.html");
+					userName = document.getElementById("username").value.replace(/\s*/g, ''),
+					userpw = document.getElementById("userpw").value.replace(/\s*/g, ''),
+					geturl = "http://192.168.1.213:38080/estapi/api/User/GetLogin?username=" + userName + "&password=" + userpw;
+					// geturl = "http://192.168.1.213:38080/estapi/api/User/GetLogin?username=ZC-DN-LZC&password=123456";
+				if ((!userName) || (!userpw)) {
+					plus.nativeUI.alert("请输入账号及密码", function(){}, "信息框", "确定");
+					return;
+				}
+				var xhr = new plus.net.XMLHttpRequest();
+				xhr.onreadystatechange = function() {
+					if (xhr.readyState == 4) {
+						if (xhr.status == 200) {
+							var response = JSON.parse(xhr.responseText);
+							if (response.length > 0) {
+								console.log(response);
+								console.log("responseText: " + xhr.responseText);
+								localStorage.setItem("user", xhr.responseText);
+								location.assign("plus/index.html");
+							}
+						} else {
+							console.log("responseText: " + xhr.responseText);
+							plus.nativeUI.alert("请检查密码及用户名是否正确", function(){}, "登陆失败", "确定");
+						}
+					}
+					
+				} 
+				// username: this.userName,password: this.userPW
+				xhr.open("GET", geturl);
+				xhr.send();
 			}
 			
 		</script>
