--- a/plus/barcode.html
+++ b/plus/barcode.html
@@ -33,6 +33,9 @@
 					scan.onmarked = onmarked;
 					scan.start();
 				}, false);
+				ws.addEventListener('hide', function() {
+					scan.start();
+				}, false);
 				ws.show('pop-in');
 				// 初始化页面
 				isScanBatch = plus.storage.getItem("isScanBatch");
@@ -61,25 +64,64 @@
 			}
 			// 扫码成功返回
 			var batchList = [];
-
+			var xhr;
+			var geturl = "http://1y94182m45.51mypc.cn:30080/mobileticket/index.php/apis/MobileTicket/insertTicket";
+			var data, sendData;
 			function onmarked(type, result, file) {
 				if(isScanBatch == "true") {
 					scan.cancel();
+					console.log(batchList);
+					console.log(result);
 					batchList.push(result);
 					plus.nativeUI.alert("扫码成功！", function() {
 						scan.start();
 					}, "信息框", "确定");
 				} else {
-					plus.storage.setItem("scanCodeResult", result);
-					cancelScan();
-					clicked("coderesult.html");
+					Scanresult = result.split(":");
+					sendData = {};
+					sendData.data = {}
+					sendData.empcode = JSON.parse(localStorage.getItem("user"))[0].EmployeeNo;
+					sendData.orderno = Scanresult[8];
+					sendData.seqno = plus.storage.getItem("processNum") ? plus.storage.getItem("processNum") : 0;
+					sendData.bedno = Scanresult[6];
+					sendData.groupno = Scanresult[5];
+					sendData.color = Scanresult[2];
+					sendData.sizes = Scanresult[9];
+					sendData.quantity = Scanresult[3];
+					//data = JSON.stringify(data);
+					//alert(data);
+					//console.log(data);
+					sendData = {name:"Donald Duck",city:"Duckburg"};
+					xhr = new plus.net.XMLHttpRequest();
+					xhr.onreadystatechange = function() {
+						if(xhr.readyState == 4) {
+							if(xhr.status == 200) {
+								alert("ok");
+								alert(xhr.responseText);
+							} else {
+								alert(xhr.responseText);
+								alert(xhr.response);
+								console.log("responseText: " + xhr.responseText);
+							}
+						}
+					}
+					xhr.open("POST", "http://www.w3school.com.cn/example/jquery/demo_test_post.asp");
+					xhr.setRequestHeader('Content-Type','application/json');
+					xhr.send(JSON.stringify(sendData));
+//					plus.storage.setItem("scanCodeResult", result);
+//					goCodeResult();
 				}
 			}
 			// 批量确定
 			function batchSubmit() {
+				if(batchList.length == 0) {
+					plus.nativeUI.alert("请扫描工票", function() {}, "信息框", "确定");
+					return;
+				}
 				batchList = JSON.stringify(batchList);
 				plus.storage.setItem("batchList", batchList);
-				clicked("coderesult.html");
+				batchList = [];
+				goCodeResult();
 			}
 			// 打开闪光灯
 			function setFlash() {
@@ -99,6 +141,20 @@
 				}, function(err) {
 					console.log('Failed: ' + err.message);
 				});
+			}
+			// 扫码成功去表单页面
+			function goCodeResult() {
+				if(plus.webview.getWebviewById("coderesult.html")) {
+					plus.webview.getWebviewById("coderesult.html").show("pop-in", null);
+				} else {
+					var _openw = plus.webview.create("coderesult.html", "coderesult.html", {
+						scrollIndicator: 'none',
+						scalable: false,
+						popGesture: 'close'
+					});
+					_openw.show("pop-in", null);
+				}
+				plus.webview.currentWebview().hide();
 			}
 		</script>
 	</head>
