--- a/plus/todayoutput.html
+++ b/plus/todayoutput.html
@@ -41,7 +41,7 @@
 							reponse = JSON.parse(xhr.responseText);
 							reponse.forEach(function(result) {
 								domItem = document.createElement('ul');
-								domItem.innerHTML = '<li>制单号：<span>' + result.Orderno + '</span></li><li>床次：<span>' + result.BedNo + '</span></li><li>工序号：<span>' + result.SeqNo + '</span></li><li>工序名称：<span>' + result.SeqName + '</span></li><li>扎号：<span>' + result.GroupNo + '</span></li><li>尺码：<span>' + result.ProdSize + '</span></li><li>颜色：<span>' + result.Color + '</span></li><li>数量：<span>' + result.Quantity + '</span></li><li>单价：<span>' + result.Price + '</span></li><li>金额：<span>' + result.Amount + '</span></li><li>回收时间：<span>' + result.BTime + '</span></li>';
+								domItem.innerHTML = '<li>制单号：<span>' + result.Orderno + '</span></li><li>床次：<span>' + result.BedNo + '</span></li><li>工序号：<span>' + result.SeqNo + '</span></li><li>工序名称：<span>' + result.SeqName + '</span></li><li>扎号：<span>' + result.GroupNo + '</span></li><li>尺码：<span>' + result.ProdSize + '</span></li><li>颜色：<span>' + result.Color + '</span></li><li>数量：<span>' + result.Quantity + '</span></li><li>单价：<span>' + result.Price + '</span></li><li>金额：<span>' + result.Amount + '</span></li><li>回收时间：<span>' + result.BTime.slice(0, 16) + '</span></li>';
 								document.getElementById('resultList').appendChild(domItem);
 								count += Number(result.Quantity);
 								pricecount += Number(result.Amount);
@@ -54,7 +54,8 @@
 						}
 					}
 				}
-				xhr.open("GET", "http://1y94182m45.51mypc.cn:30080/mobileticket/index.php/apis/MobileTicket/getTicketByDay?user=0032&date=2018-3-17")
+				var now = new Date();
+				xhr.open("GET", "http://1y94182m45.51mypc.cn:30080/mobileticket/index.php/apis/MobileTicket/getTicketByDay?user=" + JSON.parse(localStorage.getItem("user"))[0].EmployeeNo + "&date=" + now.getFullYear() + "-" + (now.getMonth() + 1) + "-" + now.getDate());
 				xhr.send();
 			}
 			// plus初始化后，执行 plusReady
